bodhilibrs_frompyo3/tests/ui/error-unsupported-enum.stderr
error: Enums are not supported
 --> tests/ui/error-unsupported-enum.rs:4:1
  |
4 | enum TestUnsupportedEnum {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
