bodhilibrs_frompyo3/tests/ui/error-unsupported-enum.rs
use frompyo3::FromPyO3;

#[derive(FromPyO3)]
enum TestUnsupportedEnum {}

fn main() {}
